kubernetes/certificate/03-lets-encrypt-with-cert-manger/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
    - secretName: www-praekiko-tk-lets-encrypt-prod-tls
      hosts:
        - www.praekiko.tk
        - praekiko.tk
  rules:
    - host: www.praekiko.tk
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx
              servicePort: 80
